--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"prepare": "husky",
-		"lint": "biome check --write ."
+		"lint": "biome lint .",
+		"format": "biome format --write ."
 	},
 	"keywords": [],
 	"author": "",
