--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"src"
 	],
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
+		"test": "jest",
 		"prepare": "husky",
 		"lint": "biome lint .",
 		"format": "biome format --write ."
@@ -26,13 +26,19 @@
 		"@opentelemetry/instrumentation": "^0.203.0",
 		"@opentelemetry/resources": "^2.0.1",
 		"@opentelemetry/sdk-node": "^0.53.0",
-		"@opentelemetry/sdk-trace-base": "^1.25.1",
 		"@opentelemetry/sdk-trace-node": "^1.25.1",
 		"@opentelemetry/semantic-conventions": "^1.36.0"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.1.4",
+		"@jest/globals": "^30.0.5",
+		"@opentelemetry/sdk-trace-base": "^1.30.1",
+		"@types/jest": "^30.0.0",
+		"@types/nock": "^11.1.0",
 		"husky": "^9.1.7",
+		"jest": "^30.0.5",
+		"nock": "^14.0.10",
+		"ts-jest": "^29.4.1",
 		"tsx": "^4.20.4",
 		"typescript": "^5.9.2"
 	},
