--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
 		"test": "jest",
 		"prepare": "husky",
 		"lint": "biome lint .",
-		"format": "biome format --write ."
+		"format": "biome format --write .",
+		"build": "tsc --project tsconfig.build.json",
+		"prepublishOnly": "pnpm run build"
 	},
 	"keywords": [],
 	"author": "",
