--- a/examples/package.json
+++ b/examples/package.json
@@ -2,7 +2,9 @@
   "name": "examples",
   "private": true,
   "dependencies": {
-    "@atla-ai/insights-sdk-js": "workspace:*"
+    "@atla-ai/insights-sdk-js": "workspace:*",
+    "@langchain/anthropic": "^0.3.26",
+    "zod": "^4.0.17"
   },
   "devDependencies": {
     "tsx": "^4.20.4",
