--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@atla-ai/insights-sdk-js",
-	"version": "0.0.2",
+	"version": "0.0.3",
 	"description": "JavaScript SDK for Atla Insights platform",
 	"main": "src/index.ts",
 	"types": "src/index.ts",
@@ -27,6 +27,7 @@
 		"@langchain/core": "^0.3.72",
 		"@langchain/langgraph": "^0.4.5",
 		"@langchain/openai": "^0.6.9",
+		"@openai/agents": "^0.0.17",
 		"@opentelemetry/api": "^1.9.0",
 		"@opentelemetry/auto-instrumentations-node": "^0.50.0",
 		"@opentelemetry/exporter-trace-otlp-http": "^0.52.1",
