--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@atla-ai/insights-sdk-js",
-	"version": "0.0.3",
+	"version": "0.0.4",
 	"description": "JavaScript SDK for Atla Insights platform",
 	"main": "src/index.ts",
 	"types": "src/index.ts",
@@ -28,14 +28,6 @@
 		"@langchain/langgraph": "^0.4.5",
 		"@langchain/openai": "^0.6.9",
 		"@openai/agents": "^0.0.17",
-		"@opentelemetry/api": "^1.9.0",
-		"@opentelemetry/auto-instrumentations-node": "^0.50.0",
-		"@opentelemetry/exporter-trace-otlp-http": "^0.52.1",
-		"@opentelemetry/instrumentation": "^0.203.0",
-		"@opentelemetry/resources": "^2.0.1",
-		"@opentelemetry/sdk-node": "^0.53.0",
-		"@opentelemetry/sdk-trace-node": "^1.25.1",
-		"@opentelemetry/semantic-conventions": "^1.36.0",
 		"ts-node": "^10.9.2",
 		"zod": "^4.0.17"
 	},
@@ -53,6 +45,14 @@
 		"typescript": "^5.9.2"
 	},
 	"peerDependencies": {
-		"openai": "^5.12.2"
+		"openai": "^5.12.2",
+		"@opentelemetry/api": ">=1.4.0 <2",
+		"@opentelemetry/auto-instrumentations-node": ">=0.50.0 <1",
+		"@opentelemetry/exporter-trace-otlp-http": ">=0.52.0 <1",
+		"@opentelemetry/instrumentation": ">=0.103.0 <1",
+		"@opentelemetry/resources": ">=1.30.0 <3",
+		"@opentelemetry/sdk-node": ">=0.53.0 <1",
+		"@opentelemetry/sdk-trace-node": ">=1.25.0 <2",
+		"@opentelemetry/semantic-conventions": ">=1.30.0 <2"
 	}
 }
