--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
 	"name": "@atla-ai/insights-sdk-js",
-	"version": "0.0.4",
+	"version": "0.0.5",
 	"description": "JavaScript SDK for Atla Insights platform",
-	"main": "src/index.ts",
-	"types": "src/index.ts",
+	"main": "dist/index.js",
+	"types": "dist/index.d.ts",
 	"files": [
-		"src"
+		"dist"
 	],
 	"scripts": {
 		"test": "jest",
