--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
 		"@langchain/openai": "^0.6.9",
 		"@openai/agents": "^0.0.17",
 		"ts-node": "^10.9.2",
-		"zod": "^4.0.17"
+		"zod": "^3.25.40"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.1.4",
@@ -45,7 +45,7 @@
 		"typescript": "^5.9.2"
 	},
 	"peerDependencies": {
-		"openai": "^5.12.2",
+		"openai": "^4.62.1 || ^5.12.2",
 		"@opentelemetry/api": ">=1.4.0 <2",
 		"@opentelemetry/auto-instrumentations-node": ">=0.50.0 <1",
 		"@opentelemetry/exporter-trace-otlp-http": ">=0.52.0 <1",
