--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@atla-ai/insights-sdk-js",
-	"version": "0.0.5",
+	"version": "0.0.6",
 	"description": "JavaScript SDK for Atla Insights platform",
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
@@ -29,7 +29,7 @@
 		"@langchain/openai": "^0.6.9",
 		"@openai/agents": "^0.0.17",
 		"ts-node": "^10.9.2",
-		"zod": "^4.0.17"
+		"zod": "^3.25.40"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.1.4",
@@ -45,11 +45,11 @@
 		"typescript": "^5.9.2"
 	},
 	"peerDependencies": {
-		"openai": "^5.12.2",
+		"openai": "^4.62.1 || ^5.12.2",
 		"@opentelemetry/api": ">=1.4.0 <2",
 		"@opentelemetry/auto-instrumentations-node": ">=0.50.0 <1",
 		"@opentelemetry/exporter-trace-otlp-http": ">=0.52.0 <1",
-		"@opentelemetry/instrumentation": ">=0.103.0 <1",
+		"@opentelemetry/instrumentation": ">=0.46.0 <0.58.0",
 		"@opentelemetry/resources": ">=1.30.0 <3",
 		"@opentelemetry/sdk-node": ">=0.53.0 <1",
 		"@opentelemetry/sdk-trace-node": ">=1.25.0 <2",
